# l42-cognito-passkey

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml
docs/: RELEASING.md  accessibility.md  api-reference.md  architecture.md  cedar-integration.md  claude-workflow.md  cognito-setup.md  design-decisions.md  dpop-future.md  handler-mode.md  integration-feedback.md  integration-guide.md  integration.md  release.md  (+11 more)
examples/backends/fastapi/: README.md  cedar  handler.py  pyproject.toml
examples/backends/fastapi/app/: cedar_engine.py  cognito.py  config.py  dependencies.py  main.py  ocsf.py
examples/backends/fastapi/app/routes/: authorize.py  callback.py  health.py  logout.py  me.py  refresh.py  session_ep.py  token.py
examples/backends/fastapi/app/session/: __init__.py  backend.py  dynamodb.py  middleware.py
examples/backends/fastapi/deploy/: app.py  requirements.txt  stack.py
examples/backends/fastapi/scripts/: smoke_test.py
examples/backends/fastapi/tests/: conftest.py  test_authorize.py  test_callback.py  test_cedar_engine.py  test_csrf.py  test_dynamodb_session.py  test_e2e_flows.py  test_health.py  test_logout.py  test_me.py  test_ocsf.py  test_refresh.py  test_session_ep.py  test_session_middleware.py  test_token.py
examples/backends/fastapi/tests/integration/: __init__.py  conftest.py  test_jwks.py  test_session_real.py
rust/: .env.example  CLAUDE.md  Cargo.toml  README.md
rust/cedar/: schema.cedarschema.json
rust/cedar/policies/: developer.cedar  editor.cedar  publisher.cedar  readonly.cedar  reviewer.cedar
rust/src/: config.rs  credential.rs  error.rs  lib.rs  main.rs  ocsf.rs  types.rs
rust/src/cedar/: engine.rs  entities.rs  groups.rs  mod.rs
rust/src/cognito/: client.rs  jwt.rs  mod.rs
rust/src/entity/: dynamodb.rs  memory.rs  mod.rs
rust/src/middleware/: csrf.rs  mod.rs
rust/src/routes/: authorize.rs  callback.rs  health.rs  logout.rs  me.rs  mod.rs  refresh.rs  session.rs  token.rs  validate_credential.rs
rust/src/session/: cookie.rs  dynamodb.rs  memory.rs  middleware.rs  mod.rs
rust/tests/: test_routes.rs
rust/tests/common/: mod.rs
(+55 files in other folders)
