[package]
name = "l42-token-handler"
version = "0.1.0"
edition = "2021"
description = "Rust Token Handler backend for l42-cognito-passkey"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8", features = ["json", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
lambda_http = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
cookie = "0.18"
cedar-policy = "4"
aws-config = "1"
aws-sdk-dynamodb = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2"
dashmap = "6"
urlencoding = "2"

[dev-dependencies]
proptest = "1"
wiremock = "0.6"
rsa = { version = "0.9", features = ["pem"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
